# modelbench

./: .gitignore  LICENSE  README.md  pyproject.toml  squad.yaml
.github/workflows/: ci.yml
modelbench/: cost.py  store.py
modelbench/backends/: base.py  ollama.py
modelbench/benchmark/: metrics.py  prompts.py  runner.py
modelbench/cli/: main.py
modelbench/report/: table.py
tests/: conftest.py  test_backends.py  test_cli.py  test_cost.py  test_metrics.py  test_ollama_backend.py  test_prompts.py  test_runner.py  test_store.py  test_table.py
