[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelbench"
version = "0.1.0"
description = "Benchmark LLMs on your local hardware"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-asyncio>=0.23",
]

[project.scripts]
modelbench = "modelbench.cli.main:cli"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
